<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--TextView (Question1) - 3 Checkboxes, TextView (Question2) - 1 RadioButton Answers,
            TableLayout each row is two columns holding TextView and EditView -->
        <TextView
            style="@style/CommonWandH"
            android:gravity="center"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/tvQ1"
            style="@style/CommonWandH"
            android:layout_marginTop="16dp"
            android:text="@string/question1" />

        <EditText
            android:id="@+id/evQ1Ans"
            style="@style/CommonWandH"
            android:gravity="bottom" />


        <TextView
            style="@style/CommonWandH"
            android:layout_marginTop="16dp"
            android:text="@string/question2" />

        <CheckBox
            android:id="@+id/chkBxQ2Ans1"
            style="@style/CommonWandH"
            android:layout_marginLeft="26dp"
            android:paddingLeft="8dp"
            android:text="@string/q2chkbox1" />

        <CheckBox
            android:id="@+id/chkBxQ2Ans2"
            style="@style/CommonWandH"
            android:layout_marginLeft="26dp"
            android:paddingLeft="8dp"
            android:text="@string/q2chkbox2" />

        <CheckBox
            android:id="@+id/chkBxQ2Ans3"
            style="@style/CommonWandH"
            android:layout_marginLeft="26dp"
            android:paddingLeft="8dp"
            android:text="@string/q2chkbox3" />

        <CheckBox
            android:id="@+id/chkBxQ2Ans4"
            style="@style/CommonWandH"
            android:layout_marginLeft="26dp"
            android:paddingLeft="8dp"
            android:text="Content provider" />

        <TextView
            style="@style/CommonWandH"
            android:layout_marginTop="16dp"
            android:text="@string/question3" />

        <RadioGroup
            android:id="@+id/rgQ3"
            style="@style/CommonWandH"
            android:layout_marginLeft="26dp">

            <RadioButton
                android:id="@+id/rbQ3Ans1"
                style="@style/CommonWandH"
                android:paddingLeft="8dp"
                android:text="@string/q3rbtrue"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/rbQ3Ans2"
                style="@style/CommonWandH"
                android:paddingLeft="8dp"
                android:text="@string/q3rbfalse"
                android:textAllCaps="true" />

        </RadioGroup>

        <TextView
            android:id="@+id/tvQ4"
            style="@style/CommonWandH"
            android:layout_marginTop="8dp"
            android:text="@string/question4" />

        <EditText
            android:id="@+id/etQ4Ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/tvQ5"
            style="@style/CommonWandH"
            android:layout_marginTop="8dp"
            android:text="@string/question5" />

        <EditText
            android:id="@+id/etQ5Ans"
            style="@style/CommonWandH" />

        <TextView
            android:id="@+id/tvQ6"
            style="@style/CommonWandH"
            android:layout_marginTop="8dp"
            android:text="@string/question6" />

        <EditText
            android:id="@+id/etQ6Ans"
            style="@style/CommonWandH" />

        <LinearLayout
            style="@style/CommonWandH"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="16dp"
                android:onClick="submitAnswers"
                android:text="@string/submitbutton" />

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textAllCaps="true"
                android:textSize="22sp" />

            <Button
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="16dp"
                android:onClick="resetAnswers"
                android:text="@string/reset" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

